<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/LAYOUT_core"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".ActivityMain"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/VIEW_nav"

        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:fitsSystemWindows="true"
        android:layout_gravity="start"

        app:headerLayout="@layout/fragment_menu_header"
        app:menu="@menu/menu" />

    <LinearLayout
        android:id="@+id/LAYOUT_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/TOOL_bar"

            android:minHeight="?attr/actionBarSize"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"

            android:theme="?attr/actionBarTheme"
            android:background="@drawable/back_gradient_teal_900"
            app:navigationIcon="@android:drawable/ic_menu_compass"

            app:subtitle="АСУ Абитуриент"
            app:title="ФГБОУ ВО &quot;ДОННТУ&quot;" />

        <ScrollView
            android:id="@+id/VIEW_main_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/VIEW_nav">

            <LinearLayout
                android:id="@+id/LAYOUT_scroll_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/LAYOUT_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/IMG_title"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/header_title"
                        android:foreground="@drawable/header_back"
                        android:scaleType="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:id="@+id/IMG_logo"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:contentDescription="@string/header_logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/header_logo"
                        tools:ignore="ImageContrastCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/TXT_faculties"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculties"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/TXT_faculty_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_1"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

                <EditText
                    android:id="@+id/TXT_faculty_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_2"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

                <EditText
                    android:id="@+id/TXT_faculty_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_3"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

                <EditText
                    android:id="@+id/TXT_faculty_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_4"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

                <EditText
                    android:id="@+id/TXT_faculty_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_5"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

                <EditText
                    android:id="@+id/TXT_faculty_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_6"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

                <EditText
                    android:id="@+id/TXT_faculty_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_7"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

                <EditText
                    android:id="@+id/TXT_faculty_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_8"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

                <EditText
                    android:id="@+id/TXT_faculty_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_9"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

                <EditText
                    android:id="@+id/TXT_faculty_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:background="@color/teal_900"

                    android:text="@string/faculty_10"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:selectAllOnFocus="true"
                    android:editable="false"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    tools:ignore="Deprecated, LabelFor" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
